--- a/#source/scss/_fonts.scss
+++ b/#source/scss/_fonts.scss
@@ -1,1 +1,20 @@
 // Файл подключения шрифтов
+@font-face {
+	font-family: "Proxima Nova";
+	src: url("./#source/fonts/ProximaNova-Regular.eot");
+	src: url("./#source/fonts/?#iefix") format("embedded-opentype"),
+		url("./#source/fonts/ProximaNova-Regular.woff") format("woff"),
+		url("./#source/fonts/ProximaNova-Regular.ttf") format("truetype");
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Proxima Nova";
+	src: url("./#source/fonts/ProximaNova-Bold.eot");
+	src: url("./#source/fonts/ProximaNova-Bold.eot?#iefix") format("embedded-opentype"),
+		url("./#source/fonts/ProximaNova-Bold.woff") format("woff"),
+		url("./#source/fonts/ProximaNova-Bold.ttf") format("truetype");
+	font-weight: bold;
+	font-style: normal;
+}
