--- a/#source/scss/_fonts.scss
+++ b/#source/scss/_fonts.scss
@@ -1,20 +1,26 @@
 // Файл подключения шрифтов
 @font-face {
 	font-family: "Proxima Nova";
-	src: url("./#source/fonts/ProximaNova-Regular.eot");
-	src: url("./#source/fonts/?#iefix") format("embedded-opentype"),
-		url("./#source/fonts/ProximaNova-Regular.woff") format("woff"),
-		url("./#source/fonts/ProximaNova-Regular.ttf") format("truetype");
+	src: url("./../fonts/ProximaNova-Regular.eot");
+	src: url("./../fonts/ProximaNova-Regular.eot?#iefix") format("embedded-opentype"),
+		url("./../fonts/ProximaNova-Regular.woff") format("woff"),
+		url("./../fonts/ProximaNova-Regular.ttf") format("truetype");
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: "Proxima Nova";
-	src: url("./#source/fonts/ProximaNova-Bold.eot");
-	src: url("./#source/fonts/ProximaNova-Bold.eot?#iefix") format("embedded-opentype"),
-		url("./#source/fonts/ProximaNova-Bold.woff") format("woff"),
-		url("./#source/fonts/ProximaNova-Bold.ttf") format("truetype");
+	src: url("./../fonts/ProximaNova-Bold.eot");
+	src: url("./../fonts/ProximaNova-Bold.eot?#iefix") format("embedded-opentype"),
+		url("./../fonts/ProximaNova-Bold.woff") format("woff"), url("./../fonts/ProximaNova-Bold.ttf") format("truetype");
 	font-weight: bold;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Woodstick";
+	src: url("./../fonts/Woodstick-Regular.ttf") format("truetype");
+	font-weight: normal;
 	font-style: normal;
 }
