--- a/css/style.css
+++ b/css/style.css
@@ -72,18 +72,30 @@ h1, h2, h3, h4, h5, h6 {
 
 @font-face {
   font-family: "Proxima Nova";
-  src: url("./#source/fonts/ProximaNova-Regular.eot");
-  src: url("./#source/fonts/?#iefix") format("embedded-opentype"), url("./#source/fonts/ProximaNova-Regular.woff") format("woff"), url("./#source/fonts/ProximaNova-Regular.ttf") format("truetype");
+  src: url("./../fonts/ProximaNova-Regular.eot");
+  src: url("./../fonts/ProximaNova-Regular.eot?#iefix") format("embedded-opentype"), url("./../fonts/ProximaNova-Regular.woff") format("woff"), url("./../fonts/ProximaNova-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Proxima Nova";
-  src: url("./#source/fonts/ProximaNova-Bold.eot");
-  src: url("./#source/fonts/ProximaNova-Bold.eot?#iefix") format("embedded-opentype"), url("./#source/fonts/ProximaNova-Bold.woff") format("woff"), url("./#source/fonts/ProximaNova-Bold.ttf") format("truetype");
+  src: url("./../fonts/ProximaNova-Bold.eot");
+  src: url("./../fonts/ProximaNova-Bold.eot?#iefix") format("embedded-opentype"), url("./../fonts/ProximaNova-Bold.woff") format("woff"), url("./../fonts/ProximaNova-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
+}
+
+@font-face {
+  font-family: "Woodstick";
+  src: url("./../fonts/Woodstick-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.wrapper {
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 .header {
@@ -92,8 +104,8 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: 0;
   left: 0;
-  background: darkgrey;
   padding: 0 50px;
+  z-index: 50;
 }
 
 .header__container {
@@ -124,7 +136,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .header__menu-link {
-  font-family: "Proxima Nova", sans-serif;
+  font-family: "Proxima Nova";
   font-size: 20px;
   line-height: 24px;
   color: #ffffff;
@@ -222,4 +234,183 @@ h1, h2, h3, h4, h5, h6 {
 
 .header__contact-item:hover svg path {
   fill: #ffed02;
+}
+
+.first {
+  width: 100%;
+  min-height: 100vh;
+  padding: 100px 0 0 0;
+  background: url("../images/system_img/First_section/BG_section_one.jpg") center/cover no-repeat;
+  position: relative;
+}
+
+.first__bg-img {
+  position: absolute;
+  z-index: 1;
+  height: 80vh;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.first__wrap {
+  max-width: 700px;
+  margin: 0 auto;
+  min-height: calc(100vh - 170px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
+  z-index: 2;
+}
+
+.first__title {
+  font-family: "Woodstick", sans-serif;
+  font-size: 50px;
+  line-height: 60px;
+  text-align: center;
+  margin: 30px 0 0 0;
+  color: #ffffff;
+}
+
+.first__button {
+  font-family: "Proxima Nova", sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 49px;
+  color: #000000;
+  width: 305px;
+  height: 69px;
+  display: block;
+  margin: auto auto 0 auto;
+  background: -webkit-linear-gradient(358.19deg, #ffed02 0%, #ff9900 100%);
+  background: -o-linear-gradient(358.19deg, #ffed02 0%, #ff9900 100%);
+  background: linear-gradient(91.81deg, #ffed02 0%, #ff9900 100%);
+  -webkit-box-shadow: 0px 0px 15px #ec9a0d;
+          box-shadow: 0px 0px 15px #ec9a0d;
+  border-radius: 25px;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.first__button:hover {
+  -webkit-transform: translateY(-2px);
+      -ms-transform: translateY(-2px);
+          transform: translateY(-2px);
+}
+
+.second {
+  width: 100%;
+  min-height: 100vh;
+  padding: 100px 0 0 0;
+  background: url("../images/system_img/Second_section/BG_section_2-min.jpg") center/cover no-repeat;
+  position: relative;
+}
+
+.second__title {
+  font-family: "Woodstick", sans-serif;
+  font-size: 50px;
+  line-height: 60px;
+  text-align: center;
+  color: #ffeb02;
+}
+
+.item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.item__img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 40%;
+          flex: 0 1 40%;
+}
+
+.item__img img {
+  max-width: 100%;
+}
+
+.item__body {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+  padding: 50px 70px 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.item__description {
+  margin: 0 80px 0 0;
+  padding: 40px 25px;
+  border: 7px dashed #ffffff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 25px;
+}
+
+.item__description p {
+  font-family: "Woodstick";
+  font-size: 50px;
+  line-height: 60px;
+  text-align: center;
+  color: #ffffff;
+}
+
+.item__price {
+  display: inline-block;
+  font-family: "Woodstick";
+  font-size: 50px;
+  line-height: 60px;
+  text-align: center;
+  padding: 13px 40px;
+  background: #000;
+  border-radius: 15px;
+  color: #ffed02;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+
+.item__button {
+  font-family: "Proxima Nova", sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 49px;
+  width: 282px;
+  height: 69px;
+  background: -webkit-linear-gradient(358.19deg, #ffed02 0%, #ff9900 100%);
+  background: -o-linear-gradient(358.19deg, #ffed02 0%, #ff9900 100%);
+  background: linear-gradient(91.81deg, #ffed02 0%, #ff9900 100%);
+  -webkit-box-shadow: 0px 0px 15px #ec9a0d;
+          box-shadow: 0px 0px 15px #ec9a0d;
+  border-radius: 25px;
+  color: #000000;
+  margin: 27px 0 0 0;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.item__button:hover {
+  -webkit-transform: translateY(-2px);
+      -ms-transform: translateY(-2px);
+          transform: translateY(-2px);
 }
