--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
   padding: 0 50px;
   z-index: 50;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .header__container {
@@ -413,4 +414,263 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-transform: translateY(-2px);
       -ms-transform: translateY(-2px);
           transform: translateY(-2px);
+}
+
+.ibg {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.ibg img {
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.third {
+  padding: 100px 0 70px 0;
+  background: url("../images/system_img/Second_section/BG_3-min.jpg") center/cover no-repeat;
+  position: relative;
+}
+
+.third__wrap {
+  text-align: center;
+}
+
+.third__title {
+  font-family: "Woodstick", sans-serif;
+  font-size: 50px;
+  line-height: 60px;
+  text-align: center;
+  color: #fff;
+}
+
+.third__items-wrap {
+  display: -ms-grid;
+  display: grid;
+  gap: 30px;
+  grid-auto-columns: 245px;
+  -ms-grid-columns: (minmax(245px, 245px))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(245px, 245px));
+  padding: 30px 50px 50px 50px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.third__link {
+  font-family: "Proxima Nova", sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 49px;
+  padding: 10px 40px;
+  background: -webkit-linear-gradient(358.19deg, #ffed02 0%, #ff9900 100%);
+  background: -o-linear-gradient(358.19deg, #ffed02 0%, #ff9900 100%);
+  background: linear-gradient(91.81deg, #ffed02 0%, #ff9900 100%);
+  -webkit-box-shadow: 0px 0px 15px #ec9a0d;
+          box-shadow: 0px 0px 15px #ec9a0d;
+  border-radius: 25px;
+  color: #000000;
+  margin: 0 0 40px 0;
+  display: inline-block;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.third__link:hover {
+  -webkit-transform: translateY(-2px);
+      -ms-transform: translateY(-2px);
+          transform: translateY(-2px);
+}
+
+.item-third {
+  width: 245px;
+  padding: 0 0 20px 0;
+  background: #19181b;
+  border-radius: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.item-third__img {
+  height: 179.7px;
+}
+
+.item-third__name {
+  margin: 11px 0 20px 0;
+  padding: 0 15px;
+  text-align: center;
+  font-family: "Woodstick", sans-serif;
+  font-size: 20px;
+  line-height: 24px;
+  color: #ffffff;
+}
+
+.item-third__price-weight {
+  padding: 0 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0 0 20px 0;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.item-third__weight {
+  font-family: "Proxima Nova", sans-serif;
+  font-size: 20px;
+  line-height: 24px;
+  color: #ffffff;
+}
+
+.item-third__price {
+  font-family: "Proxima Nova", sans-serif;
+  font-size: 20px;
+  line-height: 24px;
+  color: #ffed02;
+}
+
+.item-third__count-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0 0 20px 0;
+  padding: 0 15px;
+}
+
+.item-third__count-btn {
+  font-family: "Proxima Nova", sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  color: #ffed02;
+  width: 71px;
+  height: 44px;
+  background: none;
+  border: 3px solid #ffe802;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 25px;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.item-third__count-btn:hover {
+  -webkit-transform: translateY(-2px);
+      -ms-transform: translateY(-2px);
+          transform: translateY(-2px);
+}
+
+.item-third__count-value {
+  font-family: "Proxima Nova", sans-serif;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 34px;
+  text-align: center;
+  color: #ffffff;
+}
+
+.item-third__add-btn {
+  font-family: "Proxima Nova", sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 24px;
+  color: #ffed02;
+  width: 169px;
+  height: 44px;
+  background: none;
+  border: 3px solid #ffe802;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 25px;
+  display: block;
+  margin: 0 auto;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.item-third__add-btn:hover {
+  -webkit-transform: translateY(-2px);
+      -ms-transform: translateY(-2px);
+          transform: translateY(-2px);
+}
+
+.third__map {
+  margin: 50px 0;
+  width: 100%;
+}
+
+.third__buttons {
+  margin: 30px 0 0 0;
+}
+
+.third__buttons .third__link {
+  margin: 0 30px 0 0;
+}
+
+.info-third {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 100px;
+}
+
+.info-third:nth-child(even) {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  margin: 38px 0 50px 0;
+}
+
+.info-third__img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 35%;
+          flex: 0 1 35%;
+}
+
+.info-third__body {
+  margin: 0 0 0 50px;
+}
+
+.info-third__title {
+  font-family: "Woodstick", sans-serif;
+  font-size: 50px;
+  line-height: 60px;
+  margin: 0 0 30px 0;
+  text-align: left;
+  color: #ffffff;
+}
+
+.info-third__text {
+  font-family: "Proxima Nova", sans-serif;
+  font-size: 20px;
+  text-align: left;
+  line-height: 24px;
+  color: #ffffff;
 }
