--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   padding: 0;
   margin: 0;
@@ -96,6 +97,26 @@ h1, h2, h3, h4, h5, h6 {
 .wrapper {
   max-width: 100vw;
   overflow: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background: #19181b;
+  border-radius: 0;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ffed02;
+  border-radius: 15px;
+}
+
+* {
+  scrollbar-color: #ffed02 #e6e6e6;
+  scrollbar-width: thin;
 }
 
 .header {
@@ -296,22 +317,50 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-box-shadow: 0px 0px 15px #ec9a0d;
           box-shadow: 0px 0px 15px #ec9a0d;
   border-radius: 25px;
-  -webkit-transition: 0.2s;
-  -o-transition: 0.2s;
-  transition: 0.2s;
+  -webkit-animation: btn-animater 2s ease-out 0s infinite;
+          animation: btn-animater 2s ease-out 0s infinite;
 }
 
 .first__button:hover {
-  -webkit-transform: translateY(-2px);
-      -ms-transform: translateY(-2px);
-          transform: translateY(-2px);
+  -webkit-animation: none;
+          animation: none;
+}
+
+@-webkit-keyframes btn-animater {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  50% {
+    -webkit-transform: translateY(4px);
+            transform: translateY(4px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes btn-animater {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  50% {
+    -webkit-transform: translateY(4px);
+            transform: translateY(4px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
 }
 
 .second {
   width: 100%;
   min-height: 100vh;
   padding: 100px 0 0 0;
-  background: url("../images/system_img/Second_section/BG_section_2-min.jpg") center/cover no-repeat;
+  background: url("../images/system_img/Second_section/BG_section_2-min.png") center/cover no-repeat;
   position: relative;
 }
 
@@ -323,10 +372,38 @@ h1, h2, h3, h4, h5, h6 {
   color: #ffeb02;
 }
 
-.item {
+.second__items {
+  padding: 0 0 50px 0;
+  /* Активная точка */
+  /* Элемент точки */
+}
+
+.second__items .slick-dots {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.second__items .slick-dots li.slick-active button {
+  background: #ffed02;
+}
+
+.second__items .slick-dots li button {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background: #ff9f01;
+  font-size: 0;
+  margin: 0 10px;
+}
+
+.item {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -408,12 +485,44 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-transition: 0.2s;
   -o-transition: 0.2s;
   transition: 0.2s;
+  -webkit-animation: pulse 2s ease 0s infinite;
+          animation: pulse 2s ease 0s infinite;
 }
 
 .item__button:hover {
   -webkit-transform: translateY(-2px);
       -ms-transform: translateY(-2px);
           transform: translateY(-2px);
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0px 0px 15px #ec9a0d;
+            box-shadow: 0px 0px 15px #ec9a0d;
+  }
+  70% {
+    -webkit-box-shadow: 0px 0px 30px #ec9a0d;
+            box-shadow: 0px 0px 30px #ec9a0d;
+  }
+  100% {
+    -webkit-box-shadow: 0px 0px 15px #ec9a0d;
+            box-shadow: 0px 0px 15px #ec9a0d;
+  }
+}
+
+@keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0px 0px 15px #ec9a0d;
+            box-shadow: 0px 0px 15px #ec9a0d;
+  }
+  70% {
+    -webkit-box-shadow: 0px 0px 30px #ec9a0d;
+            box-shadow: 0px 0px 30px #ec9a0d;
+  }
+  100% {
+    -webkit-box-shadow: 0px 0px 15px #ec9a0d;
+            box-shadow: 0px 0px 15px #ec9a0d;
+  }
 }
 
 .ibg {
@@ -434,8 +543,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .third {
-  padding: 100px 0 70px 0;
-  background: url("../images/system_img/Second_section/BG_3-min.jpg") center/cover no-repeat;
+  padding: 100px 0 0 0;
+  background: url("../images/system_img/Second_section/BG_3-min.png");
   position: relative;
 }
 
@@ -482,12 +591,29 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-transition: 0.2s;
   -o-transition: 0.2s;
   transition: 0.2s;
+  -webkit-animation: pulse 2s ease 0s infinite;
+          animation: pulse 2s ease 0s infinite;
 }
 
 .third__link:hover {
   -webkit-transform: translateY(-2px);
       -ms-transform: translateY(-2px);
           transform: translateY(-2px);
+}
+
+@keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0px 0px 15px #ec9a0d;
+            box-shadow: 0px 0px 15px #ec9a0d;
+  }
+  70% {
+    -webkit-box-shadow: 0px 0px 20px #ec9a0d;
+            box-shadow: 0px 0px 20px #ec9a0d;
+  }
+  100% {
+    -webkit-box-shadow: 0px 0px 15px #ec9a0d;
+            box-shadow: 0px 0px 15px #ec9a0d;
+  }
 }
 
 .item-third {
@@ -618,7 +744,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .third__map {
-  margin: 50px 0;
+  margin: 50px 0 0 0;
   width: 100%;
 }
 
@@ -628,6 +754,11 @@ h1, h2, h3, h4, h5, h6 {
 
 .third__buttons .third__link {
   margin: 0 30px 0 0;
+}
+
+.third__footer {
+  padding: 50px 0 70px 0;
+  background: url("../images/system_img/Third_section/footer-bg.png") center/cover no-repeat;
 }
 
 .info-third {
