--- a/#source/scss/_first.scss
+++ b/#source/scss/_first.scss
@@ -49,9 +49,22 @@
 		background: linear-gradient(91.81deg, #ffed02 0%, #ff9900 100%);
 		box-shadow: 0px 0px 15px #ec9a0d;
 		border-radius: 25px;
-		transition: 0.2s;
+		// transition: 0.2s;
 		&:hover {
-			transform: translateY(-2px);
+			animation: none;
 		}
+		animation: btn-animater 2s ease-out 0s infinite;
+	}
+}
+
+@keyframes btn-animater {
+	0% {
+		transform: translateY(0);
+	}
+	50% {
+		transform: translateY(4px);
+	}
+	100% {
+		transform: translateY(0);
 	}
 }
