--- a/#source/scss/_burger.scss
+++ b/#source/scss/_burger.scss
@@ -1,88 +1,137 @@
 $time-animation: 0.4s;
 
-.header__burger{
-  display: none;
+.header__burger {
+	display: none;
 }
 
-@media (max-width: 940px){
+.burger__menu {
+	display: none;
+}
 
-  body._lock{
-    overflow: hidden;
-  }
+@media (max-width: 940px) {
+	body._lock {
+		overflow: hidden;
+	}
 
-  .header:before{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(70, 70, 70, 0.3);
-    z-index: 2;
-  }
+	.header:before {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		// background-color: rgba(70, 70, 70, 0.3);
+		z-index: 2;
+	}
 
-  .header__burger{
-    
-   display: block;
-   position: relative;
-   width: 30px;
-   height: 20px;
-   z-index: 3;
-    
-	   span {
-	    	position: absolute;
-		   background-color: #fff;
-		   left: 0;
-		   width: 100%;
-		   height: 2px;
-		   top: 9px;
-		   transition: all ease $time-animation;
-	   }
+	.header__burger {
+		display: block;
+		position: relative;
+		width: 30px;
+		height: 20px;
+		z-index: 3;
+
+		span {
+			position: absolute;
+			background-color: #fff;
+			left: 0;
+			width: 100%;
+			height: 2px;
+			top: 9px;
+			transition: all ease $time-animation;
+		}
 
 		&:before,
-		&:after{
-			content: '';
-	   	position: absolute;
-		  	background-color: #fff;
-		  	width: 100%;
-		  	height: 2px;
-		  	left: 0;
-	   	transition: all ease $time-animation;
+		&:after {
+			content: "";
+			position: absolute;
+			background-color: #fff;
+			width: 100%;
+			height: 2px;
+			left: 0;
+			transition: all ease $time-animation;
 		}
-		
-		&:before{
-			content: '';
+
+		&:before {
+			content: "";
 			top: 0;
 		}
 
-		&:after{
-			content: '';
+		&:after {
+			content: "";
 			bottom: 0;
 		}
 
 		&._active {
-
-			span{
+			span {
 				transform: scale(0);
-	    		transition: all ease $time-animation;
-			}
-			
-			&:before{
-				content: '';
-			   transform: rotate(45deg);
-			   top: 9px;
-			   transition: all ease $time-animation;
+				transition: all ease $time-animation;
 			}
 
-			&:after{
-				content: '';
-			   transform: rotate(-45deg);
-			   bottom: 9px;
-			   transition: all ease $time-animation;
+			&:before {
+				content: "";
+				transform: rotate(45deg);
+				top: 9px;
+				transition: all ease $time-animation;
 			}
 
+			&:after {
+				content: "";
+				transform: rotate(-45deg);
+				bottom: 9px;
+				transition: all ease $time-animation;
+			}
+		}
+	}
+
+	.burger__menu {
+		display: block;
+		display: flex;
+		flex-direction: column;
+		width: 100vw;
+		min-height: calc(100vh - 100px);
+		overflow-y: auto;
+		transform: translate(-100vw, 0);
+		z-index: 100;
+		position: fixed;
+		top: 100px;
+		left: 0;
+		background: rgba(0, 0, 0, 0.89);
+		padding: 50px 25px;
+		transition: 0.3s;
+
+		.header__menu-link {
+			margin: 0 0 20px 0;
+			font-size: 30px;
+			line-height: 34px;
 		}
 
+		.header__menu-link.active:after {
+			display: none;
+		}
+
+		.header__contact-phone {
+			margin: 0 0 20px 0;
+			font-size: 30px;
+			line-height: 34px;
+		}
+
+		.header__contacts {
+			display: flex;
+			align-self: flex-start;
+			margin: 0 0 20px 0;
+		}
+
+		&._active {
+			transform: translate(0, 0);
+		}
 	}
-  
+
+	.header__menu {
+		display: none;
+	}
+
+	.header__contacts {
+		display: none;
+	}
 }
