--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -22,12 +22,17 @@ html {
 body {
 }
 
+body._lock {
+	overflow: hidden;
+}
+
 // Подключение общих блоков
 @import "blocks";
 
 .wrapper {
 	max-width: 100vw;
 	overflow: hidden;
+	position: relative;
 }
 
 ::-webkit-scrollbar {
@@ -52,6 +57,7 @@ body {
 
 // Header
 @import "header";
+@import "burger";
 
 @import "first";
 @import "second";
