--- a/#source/scss/_first.scss
+++ b/#source/scss/_first.scss
@@ -32,6 +32,13 @@
 		margin: 30px 0 0 0;
 
 		color: #ffffff;
+
+		padding: 0 15px;
+
+		@media (max-width: 768px) {
+			font-size: 35px;
+			line-height: 43px;
+		}
 	}
 
 	&__button {
