--- a/#source/scss/_second.scss
+++ b/#source/scss/_second.scss
@@ -14,6 +14,13 @@
 		line-height: 60px;
 		text-align: center;
 		color: #ffeb02;
+
+		padding: 0 15px;
+
+		@media (max-width: 768px) {
+			font-size: 35px;
+			line-height: 43px;
+		}
 	}
 
 	&__items {
@@ -21,6 +28,7 @@
 		.slick-dots {
 			display: flex;
 			justify-content: center;
+			padding: 30px 0 0 0;
 		}
 		.slick-dots li {
 		}
@@ -110,6 +118,51 @@
 		}
 
 		animation: pulse 2s ease 0s infinite;
+
+		@media (max-width: 768px) {
+			font-size: 35px;
+			line-height: 43px;
+		}
+	}
+
+	@media (max-width: 768px) {
+		&__description {
+			margin: 0 0 0 0;
+			padding: 20px 10px;
+
+			p {
+				font-size: 25px;
+				line-height: 30px;
+			}
+		}
+
+		&__price {
+			font-size: 25px;
+			line-height: 30px;
+			padding: 13px 40px;
+			margin: 0px -30px 0 0;
+		}
+	}
+
+	@media (max-width: 500px) {
+		flex-direction: column;
+
+		&__img {
+			max-width: 40%;
+		}
+
+		&__description {
+			align-self: flex-end;
+			margin: 0 0 0 0;
+		}
+
+		&__price {
+			margin: 0px 0 0 0;
+		}
+
+		&__body {
+			padding: 20px 10px 0 10px;
+		}
 	}
 }
 
