--- a/#source/scss/_third.scss
+++ b/#source/scss/_third.scss
@@ -32,6 +32,13 @@
 		line-height: 60px;
 		text-align: center;
 		color: #fff;
+
+		padding: 0 15px;
+
+		@media (max-width: 768px) {
+			font-size: 35px;
+			line-height: 43px;
+		}
 	}
 
 	&__items-wrap {
@@ -65,6 +72,12 @@
 		}
 
 		animation: pulse 2s ease 0s infinite;
+
+		@media (max-width: 768px) {
+			font-size: 30px;
+			line-height: 38px;
+			padding: 10px 20px;
+		}
 	}
 }
 
@@ -204,6 +217,16 @@
 		.third__link {
 			margin: 0 30px 0 0;
 		}
+
+		@media (max-width: 1300px) {
+			display: flex;
+			flex-direction: column;
+			padding: 0 15px;
+
+			.third__link {
+				margin: 0 0 30px 0;
+			}
+		}
 	}
 
 	&__footer {
@@ -236,6 +259,10 @@
 		text-align: left;
 
 		color: #ffffff;
+
+		&--mobile {
+			display: none;
+		}
 	}
 
 	&__text {
@@ -245,5 +272,88 @@
 		line-height: 24px;
 
 		color: #ffffff;
+
+		&--mobile {
+			display: none;
+		}
+	}
+
+	@media (max-width: 1200px) {
+		padding: 0 30px;
+	}
+
+	@media (max-width: 950px) {
+		flex-direction: column;
+
+		&__img {
+			display: flex;
+			justify-content: space-between;
+
+			img {
+				flex: 0 1 50%;
+				max-width: 50%;
+			}
+
+			.info-third {
+				flex: 0 1 50%;
+			}
+		}
+
+		&__text,
+		&__title {
+			display: none;
+
+			&--mobile {
+				display: block;
+			}
+		}
+
+		&__title {
+			text-align: right;
+			@media (max-width: 768px) {
+				font-size: 35px;
+				line-height: 43px;
+			}
+		}
+
+		&__text {
+			text-align: center;
+			margin: 20px 0 0 0;
+		}
+
+		&:nth-child(even) {
+			flex-direction: column;
+
+			margin: 38px 0 50px 0;
+
+			.info-third__title {
+				text-align: left;
+			}
+		}
+	}
+
+	@media (max-width: 550px) {
+		margin: 0 0 50px 0;
+		&__img {
+			flex-direction: column;
+			align-items: center;
+
+			img {
+				max-width: 80%;
+			}
+		}
+		&:nth-child(even) {
+			.info-third__img {
+				flex-direction: column-reverse;
+			}
+
+			.info-third__title {
+				text-align: center;
+			}
+		}
+
+		&__title {
+			text-align: center;
+		}
 	}
 }
