--- a/#source/scss/_first.scss
+++ b/#source/scss/_first.scss
@@ -8,10 +8,16 @@
 	&__bg-img {
 		position: absolute;
 		z-index: 1;
-		height: 80vh;
+		height: 40vh;
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
+		opacity: 0;
+		transition: opacity 1s;
+
+		&.open {
+			opacity: 1;
+		}
 	}
 
 	&__wrap {
