--- a/css/style.css
+++ b/css/style.css
@@ -418,12 +418,20 @@ body._lock {
 .first__bg-img {
   position: absolute;
   z-index: 1;
-  height: 80vh;
+  height: 40vh;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  opacity: 0;
+  -webkit-transition: opacity 1s;
+  -o-transition: opacity 1s;
+  transition: opacity 1s;
+}
+
+.first__bg-img.open {
+  opacity: 1;
 }
 
 .first__wrap {
